@@ -33,6 +33,7 @@ FORM_FIELD_CHOICES = (
     ('radio', _('Radio buttons')),
     ('date', _('Date')),
     ('datetime', _('Date/time')),
+    ('hidden', _('Hidden field')),
 )
 
 
